--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <header class="header">
             <div class="conteiner">
-                <img class="background" src="/image/Image.png" alt="фон">
+                <img class="background" src="image/Image.png" alt="фон">
                 <div class="header__header">
                     <div class="header__logo">
                         <p>Odigo</p>
