--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="card__flex">
                     <div class="card">
                         <div class="card__img">
-                            <img src="/image/Icon.svg" alt="">
+                            <img src="./image/Icon.svg" alt="">
                         </div>
                         <div class="card__title">
                             <h3>Welcome to Odigo!</h3>
@@ -66,12 +66,12 @@
                         </div>
                         <div class="card__link">
                             <a href="#">LEARN MORE</a>
-                            <img src="/image/Shape.svg" alt="">
+                            <img src="./image/Shape.svg" alt="">
                         </div>
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="/image/Icon2.svg" alt="">
+                            <img src="./image/Icon2.svg" alt="">
                         </div>
                         <div class="card__title">
                             <h3>Your Personal Japan Guide</h3>
@@ -81,12 +81,12 @@
                         </div>
                         <div class="card__link">
                             <a href="#">LEARN MORE</a>
-                            <img src="/image/Shape.svg" alt="">
+                            <img src="./image/Shape.svg" alt="">
                         </div>
                     </div>
                     <div class="card">
                         <div class="card__img">
-                            <img src="/image/Icon3.svg" alt="">
+                            <img src="./image/Icon3.svg" alt="">
                         </div>
                         <div class="card__title">
                             <h3>Promoting Local Businesses</h3>
@@ -96,7 +96,7 @@
                         </div>
                         <div class="card__link">
                             <a href="#">LEARN MORE</a>
-                            <img src="/image/Shape.svg" alt="">
+                            <img src="./image/Shape.svg" alt="">
                         </div>
                     </div>
                 </div>    
@@ -107,34 +107,34 @@
                 </div>
                 <div class="grid__item item2">
                     <a href="#">VIEW ALL</a>
-                    <img src="/image/Shape.svg" alt="">
+                    <img src="./image/Shape.svg" alt="">
                 </div>
                 <div class="grid__item1 item3">
-                    <img src="/image/Fuji.svg" alt="">
+                    <img src="./image/Fuji.svg" alt="">
                     <div class="grid__item1_text">
                         <p>Mount Fuji</p>
                     </div>
                 </div>
                 <div class="grid__item1 item4">
-                    <img src="/image/KKyoto.svg" alt="">
+                    <img src="./image/KKyoto.svg" alt="">
                     <div class="grid__item1_text">
                         <p>Kyoto</p>
                     </div>
                 </div>
                 <div class="grid__item1 item5">
-                    <img src="/image/Tokyo.png" alt="">
+                    <img src="./image/Tokyo.png" alt="">
                     <div class="grid__item1_text">
                         <p>Tokyo</p>
                     </div>
                 </div>
                 <div class="grid__item1 item6">
-                    <img src="/image/Niigata.png" alt="">
+                    <img src="./image/Niigata.png" alt="">
                     <div class="grid__item1_text">
                         <p>Niigata</p>
                     </div>
                 </div>
                 <div class="grid__item1 item7">
-                    <img src="/image/Sapporo.png" alt="">
+                    <img src="./image/Sapporo.png" alt="">
                     <div class="grid__item1_text">
                         <p>Sapporo</p>
                     </div>
@@ -144,27 +144,27 @@
             <div class="twoCard">
                 <div class="twoCard__item">
                     <div class="twoCard__img">
-                        <img class="twoCard__imageq" src="/image/Tottori.svg" alt="">
+                        <img class="twoCard__imageq" src="./image/Tottori.svg" alt="">
                     </div>
                     <div class="twoCard__text">
                         <h2>Prefecture in Focus: Tottori</h2>
                         <p>Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door, </p>
                         <div class="twoCard__text_link">
                             <a href="#">VIEW PREFECTURE</a>
-                            <img src="/image/Shape.svg" alt="">
+                            <img src="./image/Shape.svg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="twoCard__item">
                     <div class="twoCard__img twoCard__image">
-                        <img class="twoCard__imageq imageq"  src="/image/redtrash.svg" alt="">
+                        <img class="twoCard__imageq imageq"  src="./image/redtrash.svg" alt="">
                     </div>
                     <div class="twoCard__text twoCard__texte">
                         <h2>Featured Neighborhood: Kyoto's Arashiyama</h2>
                         <p>Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door, </p>
                         <div class="twoCard__text_link">
                             <a href="#">VIEW NEIGHBORHOOD</a>
-                            <img src="/image/Shape.svg" alt="">
+                            <img src="./image/Shape.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -175,14 +175,14 @@
                 <div class="sixcard__items">
                     <div class="sixcard__item">
                         <div class="item__img">
-                            <img src="/image/NAGOYA.png" alt="">
+                            <img src="./image/NAGOYA.png" alt="">
                             <div class="img__text">
                                 <p>NAGOYA</p>
                                 <div class="text__right">
                                     <p>221</p>
-                                    <img src="/image/Shape__love.svg" alt="">
+                                    <img src="./image/Shape__love.svg" alt="">
                                     <p>50</p>
-                                    <img src="/image/Shape__message.svg" alt="">
+                                    <img src="./image/Shape__message.svg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -195,14 +195,14 @@
                     </div>
                     <div class="sixcard__item">
                         <div class="item__img">
-                            <img src="/image/NIIGATA1.png" alt="">
+                            <img src="./image/NIIGATA1.png" alt="">
                             <div class="img__text">
                                 <p>NIIGATA</p>
                                 <div class="text__right">
                                     <p>221</p>
-                                    <img src="/image/Shape__love.svg" alt="">
+                                    <img src="./image/Shape__love.svg" alt="">
                                     <p>50</p>
-                                    <img src="/image/Shape__message.svg" alt="">
+                                    <img src="./image/Shape__message.svg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -215,14 +215,14 @@
                     </div>
                     <div class="sixcard__item">
                         <div class="item__img">
-                            <img src="/image/Osaka.png" alt="">
+                            <img src="./image/Osaka.png" alt="">
                             <div class="img__text">
                                 <p>OSAKA</p>
                                 <div class="text__right">
                                     <p>221</p>
-                                    <img src="/image/Shape__love.svg" alt="">
+                                    <img src="./image/Shape__love.svg" alt="">
                                     <p>50</p>
-                                    <img src="/image/Shape__message.svg" alt="">
+                                    <img src="./image/Shape__message.svg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -235,14 +235,14 @@
                     </div>
                     <div class="sixcard__item">
                         <div class="item__img">
-                            <img src="/image/Saitama.png" alt="">
+                            <img src="./image/Saitama.png" alt="">
                             <div class="img__text">
                                 <p>SAITAMA</p>
                                 <div class="text__right">
                                     <p>221</p>
-                                    <img src="/image/Shape__love.svg" alt="">
+                                    <img src="./image/Shape__love.svg" alt="">
                                     <p>50</p>
-                                    <img src="/image/Shape__message.svg" alt="">
+                                    <img src="./image/Shape__message.svg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -255,14 +255,14 @@
                     </div>
                     <div class="sixcard__item">
                         <div class="item__img">
-                            <img src="/image/Ueno.png" alt="">
+                            <img src="./image/Ueno.png" alt="">
                             <div class="img__text">
                                 <p>UENO</p>
                                 <div class="text__right">
                                     <p>221</p>
-                                    <img src="/image/Shape__love.svg" alt="">
+                                    <img src="./image/Shape__love.svg" alt="">
                                     <p>50</p>
-                                    <img src="/image/Shape__message.svg" alt="">
+                                    <img src="./image/Shape__message.svg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -275,14 +275,14 @@
                     </div>
                     <div class="sixcard__item">
                         <div class="item__img">
-                            <img src="/image/Shibuya.png" alt="">
+                            <img src="./image/Shibuya.png" alt="">
                             <div class="img__text">
                                 <p>SHIBUYA</p>
                                 <div class="text__right">
                                     <p>221</p>
-                                    <img src="/image/Shape__love.svg" alt="">
+                                    <img src="./image/Shape__love.svg" alt="">
                                     <p>50</p>
-                                    <img src="/image/Shape__message.svg" alt="">
+                                    <img src="./image/Shape__message.svg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -297,7 +297,7 @@
             </section>
             <section class="main__video">
                 <div class="video__item">
-                    <img src="/image/Video.svg" alt="">
+                    <img src="./image/Video.svg" alt="">
                 </div>
             </section>
         </main>
